--- a/website/src/index.html
+++ b/website/src/index.html
@@ -6,5 +6,5 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
